      for bridge users. Also do this for people who set StrictEntryNodes.

  o Major bugfixes:
    - Resolved problems with (re-)fetching hidden service descriptors.
      Patch from Karsten Loesing; fixes problems with 0.2.0.18-alpha
      and 0.2.0.19-alpha.

  o Minor features (performance):
    - Tune parameters for cell pool allocation to minimize amount of
      RAM overhead used.

  o Minor bugfixes:
    - Log the correct memory chunk sizes for empty RAM chunks in mempool.c.
    - Directory mirrors no longer include a guess at the client's IP
      address if the connection appears to be coming from the same /24
      network; it was producing too many wrong guesses.
    - We were leaking a file descriptor if Tor started with a zero-length
      cached-descriptors file. Patch by freddy77; bugfix on 0.1.2.
    - Have the new hidden service code respect the SafeLogging setting.
      Bugfix on 0.2.0.x.  Patch from Karsten.

  o Code simplifications and refactoring:
    - Remove the tor_strpartition function: its logic was confused,
      and it was only used for one thing that could be implemented far
      more easily.


Changes in version 0.2.0.19-alpha - 2008-02-09
  Tor 0.2.0.19-alpha makes more progress towards normalizing Tor's TLS
  handshake, makes path selection for relays more secure and IP address
  guessing more robust, and generally fixes a lot of bugs in preparation
  for calling the 0.2.0 branch stable.

  o Major features:
    - Do not include recognizeable strings in the commonname part of
      Tor's x509 certificates.

  o Major bugfixes:
    - If we're a relay, avoid picking ourselves as an introduction point,
      a rendezvous point, or as the final hop for internal circuits. Bug
      reported by taranis and lodger. Bugfix on 0.1.2.x.
    - Patch from "Andrew S. Lists" to catch when we contact a directory
      mirror at IP address X and he says we look like we're coming from
      IP address X. Bugfix on 0.1.2.x.
